tileserver/tileserver-gl-service-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: tileserver-gl
spec:
  type: NodePort
  selector:
    app: tileserver-gl
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080  # Specify an external port
