tileserver/tileserver-gl-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tileserver-gl
spec:
  selector:
    app: tileserver-gl
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
