tileserver/tileserver-gl-ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tileserver-ingress-local
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
  - host: "localhost"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tileserver-service
            port:
              number: 80
