tileserver/tileserver-gl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tileserver-ingress
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true" # Redirect HTTP to HTTPS
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # For automated TLS certificates using Cert-Manager
spec:
  tls:
  - hosts:
    - maptiles.whgazetteer.org # TEMPORARY PENDING SWITCH
    secretName: tiles-tls-secret
  ingressClassName: contour
  rules:
  - host: maptiles.whgazetteer.org # TEMPORARY PENDING SWITCH
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tileserver-service
            port:
              number: 80 # Must match Tileserver service port
